--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -91,6 +91,12 @@ main {
     box-sizing: border-box;
 }
 
+.success {
+    width: 10px;
+    height: 10px;
+    background: black;
+}
+
       /**
  * termynal.js
  *
