--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -35,6 +35,9 @@ map.on('click', function(e) {
    var el = document.createElement('div');
   el.classList.add('marker');
 
+    map.jumpTo({center: e.lngLat});
+
+
   var marker = new mapboxgl.Marker(el)
     .setLngLat(e.lngLat)
     .addTo(map);
