--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -93,9 +93,9 @@ main {
 }
 
 .marker {
-    width: 10px;
-    height: 10px;
-    background: black;
+    width: 13px;
+    height: 13px;
+    background: #00ffb2;
 }
 
       /**
