--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -99,6 +99,19 @@ main {
     border-radius: 50%;
 }
 
+.marker::after {
+  content: "";
+  display: block;
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
       /**
  * termynal.js
  *
