--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -72,6 +72,8 @@ async function checklocation(lat, lng) {
   if (response.ok) {
     // Get the response data
     const data = await response.json();
+    const logDiv = document.getElementById('log');
+ 
 
 // Remove any existing elements from the console__image and console__text elements
 document.getElementById('console__image').innerHTML = '';
@@ -107,9 +109,12 @@ var termynal = new Termynal('#console__text',
 
 if (data.success === true) {
   console.log('true');
+  logDiv.innerHTML += `<p>${data.lat} , ${data.lng} : Data found</p>`;
 }
 else {
-  console.log('false')
+  console.log('false');
+  logDiv.innerHTML += `<p>${data.lat} , ${data.lng} : No data found</p>`;
+
 }
 
   }
