--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -111,6 +111,14 @@ main {
   left: 0;
 }
 */
+#log {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    color: #fff;
+    font-size: 8px;
+    line-height: 5px;
+}
 
       /**
  * termynal.js
