--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -112,12 +112,13 @@ main {
 }
 */
 #log {
-    position: absolute;
-    top: 25px;
-    left: 25px;
+        position: absolute;
+    bottom: 50px;
+    left: 30px;
     color: #fff;
-    font-size: 8px;
-    line-height: 5px;
+    font-size: 7px;
+    line-height: 3px;
+    text-shadow: 2px 2px #000000;
 }
 
       /**
