--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -16,327 +16,38 @@ layout: layouts/telesthesia-base.njk
 
     </div>
 
+    <!-- Include the Leaflet JavaScript file -->
+<script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
     <!-- Initialize the map -->
     <script>
-   // Initialize the map
-function initMap() {
-  // Create a new Google Maps object
-  const map = new google.maps.Map(document.getElementById('map'), {
-    center: { lat: 51.5041, lng: -0.0738 }, // The center point of the map
-    zoom: 12, // The zoom level of the map
-    styles: [
-    {
-        "featureType": "all",
-        "elementType": "labels.text.fill",
-        "stylers": [
-            {
-                "saturation": 36
-            },
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 40
-            }
-        ]
-    },
-    {
-        "featureType": "all",
-        "elementType": "labels.text.stroke",
-        "stylers": [
-            {
-                "visibility": "on"
-            },
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 16
-            }
-        ]
-    },
-    {
-        "featureType": "all",
-        "elementType": "labels.icon",
-        "stylers": [
-            {
-                "visibility": "simplified"
-            },
-            {
-                "hue": "#ff0000"
-            },
-            {
-                "saturation": "-100"
-            }
-        ]
-    },
-    {
-        "featureType": "administrative",
-        "elementType": "geometry.fill",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 20
-            }
-        ]
-    },
-    {
-        "featureType": "administrative",
-        "elementType": "geometry.stroke",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 17
-            },
-            {
-                "weight": 1.2
-            }
-        ]
-    },
-    {
-        "featureType": "administrative.locality",
-        "elementType": "labels.icon",
-        "stylers": [
-            {
-                "saturation": "-96"
-            },
-            {
-                "lightness": "-57"
-            },
-            {
-                "weight": "0.01"
-            }
-        ]
-    },
-    {
-        "featureType": "landscape",
-        "elementType": "geometry",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 20
-            }
-        ]
-    },
-    {
-        "featureType": "landscape.man_made",
-        "elementType": "all",
-        "stylers": [
-            {
-                "visibility": "on"
-            }
-        ]
-    },
-    {
-        "featureType": "poi",
-        "elementType": "geometry",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 21
-            }
-        ]
-    },
-    {
-        "featureType": "poi",
-        "elementType": "labels.icon",
-        "stylers": [
-            {
-                "invert_lightness": true
-            },
-            {
-                "hue": "#00ff3b"
-            },
-            {
-                "saturation": "18"
-            },
-            {
-                "lightness": "0"
-            },
-            {
-                "visibility": "simplified"
-            }
-        ]
-    },
-    {
-        "featureType": "road",
-        "elementType": "labels.icon",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "road.highway",
-        "elementType": "geometry.fill",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 17
-            }
-        ]
-    },
-    {
-        "featureType": "road.highway",
-        "elementType": "geometry.stroke",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 29
-            },
-            {
-                "weight": 0.2
-            }
-        ]
-    },
-    {
-        "featureType": "road.arterial",
-        "elementType": "geometry",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 18
-            }
-        ]
-    },
-    {
-        "featureType": "road.local",
-        "elementType": "geometry",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 16
-            }
-        ]
-    },
-    {
-        "featureType": "transit",
-        "elementType": "all",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "transit",
-        "elementType": "geometry",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 19
-            }
-        ]
-    },
-    {
-        "featureType": "transit",
-        "elementType": "labels.icon",
-        "stylers": [
-            {
-                "visibility": "simplified"
-            },
-            {
-                "hue": "#ff0000"
-            },
-            {
-                "saturation": "-100"
-            },
-            {
-                "lightness": "-49"
-            }
-        ]
-    },
-    {
-        "featureType": "transit.line",
-        "elementType": "all",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "transit.station.bus",
-        "elementType": "geometry",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "transit.station.bus",
-        "elementType": "labels.icon",
-        "stylers": [
-            {
-                "visibility": "off"
-            }
-        ]
-    },
-    {
-        "featureType": "water",
-        "elementType": "geometry",
-        "stylers": [
-            {
-                "color": "#050807"
-            },
-            {
-                "lightness": 17
-            }
-        ]
-    }
-]
+    // Create a new Mapbox map
+    mapboxgl.accessToken = 'pk.eyJ1IjoidGhlYm95ZGF2aWQiLCJhIjoiY2twM3MzcWdxMGVibzJ1bGV6bnp5NHpjZiJ9.OcASP9pRFCNQEAeBzKEtxA';
+  const map = new mapboxgl.Map({
+    container: 'map', // The ID of the div element to hold the map
+    style: 'mapbox://styles/theboydavid/ckp4183ve7x8f18k8ftffl277',
+//    style: 'mapbox://styles/mapbox/streets-v11', // The Mapbox style to use
+    center: [-0.0738,51.5041], // The center point of the map
+    zoom: 12 // The zoom level of the map
   });
 
-  // Add a click listener to the map
-  map.addListener('click', function(e) {
-    // Get the latitude and longitude of the click event
-    var lat = e.latLng.lat();
-    var lng = e.latLng.lng();
+// Add a click listener to the map
+map.on('click', function(e) {
+  // Get the latitude and longitude of the click event
+  var lat = e.lngLat.lat;
+  var lng = e.lngLat.lng;
 
-    // create the mark div element
-    var mark = document.createElement('div');
-    mark.className = 'marker';
+   // create the mark div element
+  var mark = document.createElement('div');
+  mark.className = 'marker';
 
-    // add the mark div to the map at the click location
-    new google.maps.Marker({
-      position: e.latLng,
-      map: map
-    });
+  // add the mark div to the map at the click location
+  new mapboxgl.Marker(mark)
+    .setLngLat(e.lngLat)
+    .addTo(map);
 
-    // Send the latitude and longitude to the checklocation function
-    checklocation(lat, lng);
-  });
-}
-
-// Load the Google Maps API
-function loadMap() {
-  var script = document.createElement('script');
-  script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyDEzcqZMh8FgwGyMwpT0jhlrJkIBR8tT6w&callback=initMap';
-  document.head.appendChild(script);
-}
-
-// Call the loadMap function to load the Google Maps API
-loadMap();
+  // Send the latitude and longitude to the checklocation function
+  checklocation(lat, lng);
+});
 
 async function checklocation(lat, lng) {
   // Replace this with your own Netlify function URL
@@ -350,8 +61,8 @@ async function checklocation(lat, lng) {
   const response = await fetch(functionUrl, {
     method: 'POST',
     headers: {
-      'Content-Type': 'application/json',
-      'Origin': 'https://telesthesia-app.netlify.app',
+      'Content-Type': 'application/x-www-form-urlencoded',
+      'Origin': 'https://telesthesia-app.netlify.app.netlify.app',
       'Accept': 'application/json'
     },
     body: JSON.stringify({ lat: roundedLat, lng: roundedLng }) // Stringify the body data as JSON
@@ -416,4 +127,4 @@ else {
   }
 }
 
-</script>
+    </script>
