--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -55,8 +55,11 @@
 
           #console__image {
         flex: 0 0 20%; /* Set the flex basis to 20% and allow the element to shrink or grow */
-        max-width: 100px; /* Set a maximum width of 100px */
+        max-width: 100%; /* Set a maximum width of 100px */
       }
+       #console__image img {
+       max-width: 100%;}
+       
        #console__text {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
         color: #21f9f9;
