--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -18,5 +18,5 @@ layout: layouts/telesthesia-base.njk
 
     <!-- Include the Leaflet JavaScript file -->
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
-<script src='https://telesthesia-app.netlify.app.netlify.app/js/telesthesia.js'></script>
+<script src='https://telesthesia-app.netlify.app/js/telesthesia.js'></script>
     <!-- Initialize the map -->
