--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -23,6 +23,7 @@
           z-index:0;
           -webkit-filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%);
           filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%);
+          background: #194146;
 
         }
         #map::after {
@@ -44,7 +45,7 @@
     top: 40px;
     right: 40px;
     min-height: 20px;
-    background-color: #154246;
+    background-color: rgba(21, 66, 70, 0.7);
     z-index: 1;
     padding: 20px;
     /* display: flex; */
