--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -4,7 +4,7 @@ layout: layouts/telesthesia-base.njk
 
     <!-- Create a div element to hold the map -->
     <div id="mapcontainer">
-    <div id="map"></div>
+      <div id="map"></div>
     </div>
 
      <div id="console">
@@ -12,9 +12,7 @@ layout: layouts/telesthesia-base.njk
         <div id="console__image"></div>
     </div>
 
-    <div id="log">
-
-    </div>
+    <div id="log"></div>
 
     <!-- Include the Leaflet JavaScript file -->
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
