--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -40,18 +40,26 @@
   left: 0;
   opacity: 0.5;
         }
-  #console {
-    position: fixed;
+
+#data-container {
+ position: fixed;
     top: 40px;
     right: 40px;
+    width: 170px;
+}
+
+.panel {
     min-height: 20px;
     background-color: rgba(21, 66, 70, 0.7);
     z-index: 1;
     padding: 20px;
     /* display: flex; */
     font-size: 12px;
-    width: 170px;
     border: 1px solid #20dfdf;
+}
+
+  #console {
+   
     }
 
           #console__image {
