--- a/index.njk
+++ b/index.njk
@@ -2,255 +2,4 @@
 layout: layouts/home.njk
 ---
 
-<header>
-  <div style-"display:flex;">
-<div class="h_score">
-  <h1 id="result"></h1>
-</div>
-<div class="h_check">
-  <button id="button" disabled>Check</button>
-</div>
-</div>
-</header>
-
-<form id="records" style="display:flex;flex-wrap: wrap;"></div>
-
-<!--
-<form>
-  <div style="display:flex">
-  <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
-  <label for="checkbox1">1</label><br>
-  <input type="checkbox" id="checkbox2" name="checkbox2" value="2">
-  <label for="checkbox2">2</label><br>
-  <input type="checkbox" id="checkbox3" name="checkbox3" value="3">
-  <label for="checkbox3">3</label><br>
-  <input type="checkbox" id="checkbox4" name="checkbox4" value="4">
-  <label for="checkbox4">4</label><br>
-  <input type="checkbox" id="checkbox5" name="checkbox5" value="5">
-  <label for="checkbox5">5</label><br>
-</div>
-
-<div style="display:flex">
-  <input type="checkbox" id="checkbox6" name="checkbox1" value="6">
-  <label for="checkbox6">6</label><br>
-  <input type="checkbox" id="checkbox7" name="checkbox2" value="7">
-  <label for="checkbox7">7</label><br>
-  <input type="checkbox" id="checkbox8" name="checkbox3" value="8">
-  <label for="checkbox8">8</label><br>
-  <input type="checkbox" id="checkbox9" name="checkbox4" value="9">
-  <label for="checkbox9">9</label><br>
-  <input type="checkbox" id="checkbox10" name="checkbox5" value="10">
-  <label for="checkbox10">10</label><br>
-</div>
-</form> 
--->
-
-
-<style>
-  input[type="checkbox"] {
-  display: none;
-}
-
-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100px;
-  height: 150px;
-  background-color: #cccccc;
-  margin:3px;
-}
-
-label:before {
-  content: "";
-}
-input[type="checkbox"]:checked + label {
-  background-color: #00ff00;
-}
-
-input[type="checkbox"]:disabled + label {
-  background-color: black;
-  color: white;
-}
-
-
-@keyframes shake {
-  0% {
-    transform: translateX(0);
-  }
-  25% {
-    transform: translateX(-10px);
-  }
-  50% {
-    transform: translateX(10px);
-  }
-  75% {
-    transform: translateX(-10px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
-.shake {
-  animation: shake 0.5s;
-}
-
-</style>
-
-<script>
- function updateCheckboxes() {
-  // Get the checkbox and label elements
-  const checkbox = this;
-  const label = document.querySelector(`label[for="${checkbox.id}"]`);
-
-  // Count the number of checked checkboxes
-  const checkedCount = document.querySelectorAll('input[type="checkbox"]:checked').length;
-
-  // If the checkbox is not disabled and there are 5 checked boxes, disable all unchecked boxes, add the shake class to the label, and remove the shake class from all other labels
-  if (!checkbox.disabled && checkedCount === 5) {
-    const uncheckedBoxes = document.querySelectorAll('input[type="checkbox"]:not(:checked)');
-    uncheckedBoxes.forEach(box => {
-      box.disabled = true;
-    });
-    const uncheckedLabels = document.querySelectorAll('input[type="checkbox"]:not(:checked) + label');
-    uncheckedLabels.forEach(uncheckedLabel => {
-      uncheckedLabel.classList.remove('shake');
-    });
-  }
-  // If the checkbox is not disabled and there are 4 checked boxes, disable all unchecked boxes and remove the shake class from the label
-  else if (!checkbox.disabled && checkedCount === 5) {
-    const uncheckedBoxes = document.querySelectorAll('input[type="checkbox"]:not(:checked)');
-    uncheckedBoxes.forEach(box => {
-      box.disabled = true;
-    });
-  }
-  // If the checkbox is not disabled and there are less than 4 checked boxes, remove the shake class from the label
-  else if (!checkbox.disabled && label.classList.contains('shake')) {
-    label.classList.remove('shake');
-  }
-  // If the checkbox is disabled and there are less than 4 checked boxes, enable the checkbox and remove the shake class from the label
-  else if (checkbox.disabled && checkedCount <= 5) {
-    checkbox.disabled = false;
-  }
-
-  if (checkedCount < 5) {
-  const disabledBoxes = document.querySelectorAll('input[type="checkbox"]:disabled');
-  disabledBoxes.forEach(box => {
-    box.disabled = false;
-  });
-}
-
-
-}
-
-async function displayRecords() {
-  try {
-    // Call the Netlify function to fetch all records
-    const response = await fetch('/.netlify/functions/returnrecords')
-    const data = await response.json()
-
-    console.log(data.results);
-
-    // Extract the id and name for each record
-    const records = data.results.map(record => ({
-      id: record.id,
-      name: record.name
-    }))
-
-    // Load the records into the div with the id of "records"
-    const recordsDiv = document.getElementById('records')
-    
-    records.forEach(record => {
-      recordsDiv.innerHTML += `
-        <div class=\"flex20\"><input type="checkbox" id="checkbox${record.id}" name="checkbox${record.id}" value="${record.id}">
-        <label for="checkbox${record.id}">${record.name}</label></div>
-      `
-    })
-  } catch (error) {
-    console.error(error)
-  }
-
-const checkboxElements = document.querySelectorAll('input[type="checkbox"]');
-checkboxElements.forEach(checkbox => {
-  checkbox.addEventListener('change', updateCheckboxes);
-});
-
-const button = document.getElementById('button');
-const checkboxes = Array.from(document.querySelectorAll('input[type="checkbox"]'));
-
-// Add an event listener to each checkbox to enable/disable the button
-  checkboxes.forEach(checkbox => {
-    checkbox.addEventListener('change', () => {
-      // Count the number of checked checkboxes
-      const checkedCount = checkboxes.reduce((count, cb) => cb.checked ? count + 1 : count, 0);
-
-      // Enable the button if exactly 5 checkboxes are checked, otherwise disable it
-      if (checkedCount === 5) {
-        button.disabled = false;
-      } else {
-        button.disabled = true;
-      }
-    });
-  });
-
-
-button.addEventListener('click', () => {
-  // Get the checkboxes
-  const checkboxes = document.querySelectorAll('input[type="checkbox"]:checked');
-
-  // Convert the NodeList of checkboxes to an array
-  const values = Array.from(checkboxes).map(checkbox => checkbox.value);
-
-  // Build the URL string with the values
-  const url = `/.netlify/functions/lookupcards?values=${values.join(',')}`;
-
-  // Make a GET request to the function
-  fetch(url)
-    .then(response => response.json())
-    .then(data => {
-      // Get the 'result' element
-      const result = document.getElementById('result');
-
-      // Set the HTML content of the 'result' element to the response data
-      result.innerHTML = data.allvalues;
-    })
-    .catch(error => {
-      // Log the error message
-      console.error(error);
-    });
-});
-
-// Add the 'shake' class to the label when it is clicked
-function shakeLabel() {
-  // Only add the 'shake' class if the checkbox is disabled
-  if (this.previousElementSibling.disabled) {
-    this.classList.add('shake');
-  }
-}
-
-// Remove the 'shake' class from the label after 5 seconds
-function stopShakingLabel() {
-  setTimeout(() => {
-    this.classList.remove('shake');
-  }, 1000);
-}
-
-// Get the label elements
-const labelElements = document.querySelectorAll('label');
-
-// Add the 'shake' and 'stopShaking' event listeners to the labels
-labelElements.forEach(label => {
-  label.addEventListener('click', shakeLabel);
-  label.addEventListener('click', stopShakingLabel);
-});
-
-
-//=========
-
-
-}
-
-displayRecords();
-
-</script>
+<h1>Telesthesia Institute</h1>
