--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -13,6 +13,7 @@
             padding: 0;
             margin: 0;
             font-family: 'Martian Mono', monospace;
+            background: #194146;
         }
         html, body, main, #map, #mapcontainer {
             height: 100%;
@@ -132,6 +133,27 @@ main {
     line-height: 3px;
     text-shadow: 2px 2px #000000;
 }
+
+.grid-container {
+  max-width: 1920px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  margin: -10px;
+}
+
+
+.grid-item {
+  flex: 1 0 calc(100% / 6 - 20px);
+  max-width: calc(100% / 6 - 20px);
+  margin: 10px;
+  border: 1px solid #ddd;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
 
       /**
  * termynal.js
