--- a/telesthesia/viewings.njk
+++ b/telesthesia/viewings.njk
@@ -3,3 +3,16 @@ layout: layouts/telesthesia-base.njk
 ---
 
 <h1>Viewings</h1>
+
+<div class="grid-container">
+  <div class="grid-item">Item 1</div>
+  <div class="grid-item">Item 2</div>
+  <div class="grid-item">Item 3</div>
+  <div class="grid-item">Item 4</div>
+  <div class="grid-item">Item 5</div>
+  <div class="grid-item">Item 6</div>
+  <div class="grid-item">Item 7</div>
+  <div class="grid-item">Item 8</div>
+  <div class="grid-item">Item 9</div>
+  <div class="grid-item">Item 10</div>
+</div>
