--- a/telesthesia/viewings.njk
+++ b/telesthesia/viewings.njk
@@ -5,14 +5,23 @@ layout: layouts/telesthesia-base.njk
 <h1>Viewings</h1>
 
 <div class="grid-container">
-  <div class="grid-item">Item 1</div>
-  <div class="grid-item">Item 2</div>
-  <div class="grid-item">Item 3</div>
-  <div class="grid-item">Item 4</div>
-  <div class="grid-item">Item 5</div>
-  <div class="grid-item">Item 6</div>
-  <div class="grid-item">Item 7</div>
-  <div class="grid-item">Item 8</div>
-  <div class="grid-item">Item 9</div>
-  <div class="grid-item">Item 10</div>
 </div>
+
+
+  <script>
+    // Fetch data from Netlify function
+    fetch('/getviewings')
+      .then(response => response.json())
+      .then(data => {
+        const gridContainer = document.getElementById('grid-container');
+
+        // Draw grid items
+        data.viewings.forEach(viewing => {
+          const gridItem = document.createElement('div');
+          gridItem.classList.add('grid-item');
+          gridItem.textContent = viewing.viewing;
+          gridContainer.appendChild(gridItem);
+        });
+      })
+      .catch(error => console.error(error));
+  </script>
