--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -134,7 +134,7 @@ main {
     text-shadow: 2px 2px #000000;
 }
 
-.grid-container {
+#grid-container {
   max-width: 1920px;
   margin: 0 auto;
   display: flex;
