--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -14,6 +14,21 @@ layout: layouts/telesthesia-base.njk
         <div id="console__image"></div>
     </div>
 
+    <div class="carousel-container">
+  <div class="carousel">
+    <div class="carousel-inner" id="carousel-inner"></div>
+    <a class="carousel-control carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+      <span class="carousel-control-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control carousel-control-next" href="#carousel" role="button" data-slide="next">
+      <span class="carousel-control-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
     </div>
 
     <div id="log"></div>
