--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -168,6 +168,14 @@ main {
   overflow: hidden;
 }
 
+.carousel-item {
+display:none;
+}
+
+.carousel-item.active {
+display:block;
+}
+
 .carousel-inner {
   display: flex;
   width: 100%;
