--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -49,7 +49,7 @@
     width: 180px;
 }
 
-.panel {
+.panel, .carousel-item {
     min-height: 20px;
     background-color: rgba(21, 66, 70, 0.7);
     z-index: 1;
