--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -15,7 +15,7 @@ layout: layouts/telesthesia-base.njk
     </div>
 
     <div class="carousel-container">
-  <div class="carousel">
+  <div id="carousel">
     <div class="carousel-inner" id="carousel-inner"></div>
     <a class="carousel-control carousel-control-prev" href="#carousel" role="button" data-slide="prev">
       <span class="carousel-control-icon" aria-hidden="true"></span>
