--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -17,12 +17,10 @@ layout: layouts/telesthesia-base.njk
     <div class="carousel-container">
   <div id="carousel">
     <div class="carousel-inner" id="carousel-inner"></div>
-    <a class="carousel-control carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-      <span class="carousel-control-icon" aria-hidden="true"></span>
+    <a class="carousel-control carousel-control-prev" href="#carousel" role="button" data-slide="prev" id="carousel-prev">
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control carousel-control-next" href="#carousel" role="button" data-slide="next">
-      <span class="carousel-control-icon" aria-hidden="true"></span>
+    <a class="carousel-control carousel-control-next" href="#carousel" role="button" data-slide="next" id="carousel-next">
       <span class="sr-only">Next</span>
     </a>
   </div>
