--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -2,20 +2,10 @@
 layout: layouts/telesthesia-base.njk
 ---
 
+<a href="#" id="toggle-viewings">Toggle Viewings</a>
 
-<div class="tab-container">
-  <input id="tab1" type="radio" name="tabs" checked>
-  <label for="tab1">Tab 1</label>
-  
-  <input id="tab2" type="radio" name="tabs">
-  <label for="tab2">Tab 2</label>
-  
-  <input id="tab3" type="radio" name="tabs">
-  <label for="tab3">Tab 3</label>
-  
-  <div class="tab-content">
-
-       <div id="mapcontainer">
+    <!-- Create a div element to hold the map -->
+    <div id="mapcontainer">
       <div id="map"></div>
     </div>
 
@@ -30,16 +20,7 @@ layout: layouts/telesthesia-base.njk
 
     <div id="log"></div>
 
-  </div>
-  
-  <div class="tab-content">
     <div id="viewings"></div>
-  </div>
-  
-  <div class="tab-content">
-    <p>Content for Tab 3 goes here.</p>
-  </div>
-</div>
 
     <!-- Include the Leaflet JavaScript file -->
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
