--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -136,6 +136,18 @@ main {
     text-shadow: 2px 2px #000000;
 }
 
+#viewings {
+    width: 100%;
+    height: 100vh;
+    background: #194146;
+    z-index: 9998;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
 .hidden {
   display: none;
 }
