--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -42,7 +42,7 @@
   opacity: 0.5;
         }
 
-#toggle-viewings {position: absolute;}
+#toggle-viewings {position: absolute;z-index:9999;}
 
 #data-container {
  position: fixed;
