--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -20,7 +20,7 @@ layout: layouts/telesthesia-base.njk
 
     <div id="log"></div>
 
-    <div id="viewings"></div>
+    <div id="viewings" class="hidden"></div>
 
     <!-- Include the Leaflet JavaScript file -->
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.js'></script>
