--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -9,7 +9,7 @@ layout: layouts/telesthesia-base.njk
     <div id="data-container">
 
      <div id="console" class="panel">
-        <div id="console__text"><span>Ready for input.</span><span>Select a location to search Telesthesia for relevant data in relation to case #8492.`</span></div>
+        <div id="console__text"><span>Ready for input.</span><span>Select a location to search.</span></div>
         <div id="console__image"></div>
     </div>
 
