--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -63,7 +63,7 @@ body::before {
 
 .panel, .carousel-item {
     min-height: 20px;
-    background-color: rgba(0, 0, 29, 0.3)
+    background-color: rgba(0, 0, 29, 0.3);
     z-index: 1;
     padding: 20px;
     /* display: flex; */
