--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -70,7 +70,7 @@
        #console__image img {
        max-width: 100%;}
        
-       #console__text {
+       #console__text, .carousel-item {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
         color: #21f9f9;
         line-height: 18px;
