--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -210,6 +210,25 @@ main {
             animation: blink 1s infinite;
 }
 
+/* Mobile */
+@media (max-width: 640px) {
+
+#data-container {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    padding: 0;
+}
+
+#console__image {
+    max-width: 100%;
+    max-height: 150px;
+    overflow: hidden;
+}
+
+}	
+
 
 /* Cursor animation */
 
