--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -216,6 +216,7 @@ main {
 #data-container {
     position: fixed;
     bottom: 0;
+    top: auto;
     right: 0;
     width: 100%;
     padding: 0;
@@ -226,6 +227,15 @@ main {
     max-height: 150px;
     overflow: hidden;
 }
+
+.panel {
+margin 20px;
+}
+
+#console::before {
+top: 10px;
+left: 30px;
+    }
 
 }	
 
