--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -232,6 +232,10 @@ main {
 margin: 20px;
 }
 
+body::before {
+box-shadow: 0 0 200px rgba(0,0,0,0.5) inset;
+}
+
 #console::before {
 top: 10px;
 left: 30px;
